style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    overflow: hidden;

}

.container {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;

}


.background-image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    opacity: .1;
    /* margin-top: -150px; */
}


.header {
    margin-top: 2px;
    width: 100vw;
    text-align: center;
    font-size: clamp(2.5rem, 6vw, 4rem);
}



.container_house {
    margin: 5vh .5vw .5vw 1vw;
    border-radius: 5px;
    width: 22vw;
    border: 5px solid black;
    height: 70vh;


}

@media only screen and (max-width: 600px) {
    .container {
        height: 80vh;
    }

    .container_house {
        width: 50vw;
        margin: 0px;
        border-radius: 5px;
        border: 2px solid black;
        height: 50vh;
        height: 37vh;


    }

    .container_house_top {
        height: 45%;
    }

    .container_house_bottom {
        height: 50%;
        height: 37vh;

    }

    .container_house_top {
        height: 50%;
    }

    .container_house_bottom {
        height: 50%;
    }

    .container_house_top_img {
        width: calc(40% + 10px);
    }

    .container_house_top_img_sapphire {
        width: 50%;


    }

    .container_house_top_img {
        width: calc(35% + 10px);
    }

    .container_house_top_img_sapphire {
        width: 50%
    }

    .header {
        margin-top: 0;
        height: 20vh;
    }
}



.container_house_top {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 70%;
}

.amber {
    background-color: #e46725;
}

.sapphire {
    background-color: #1271b5;
}

.ruby {
    background-color: #c11c22
}

.pearl {
    background-color: black;
}

.container_house_bottom {
    height: 40%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: clamp(3rem, 5vw, 6rem);
    text-align: center;
}

.start {
    position: absolute;
    left: 0;
    top: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
}

.start-button {
    display: flex;
    justify-content: center;
    align-items: center;
    width: calc(30vh + 50px);
    height: calc(30vh + 50px);
    border-radius: 100%;
    font-size: clamp(3rem, 7vw, 6rem);
    cursor: pointer;
    z-index: 11;
    background-color: rgb(50, 146, 50);
    color: white;
    border: none;
    opacity: .9;

}

.winner {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    font-size: clamp(6rem, 13vw, 12rem);
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 0;
    text-align: center;
    z-index: 10;

}

::backdrop {
    background-color: white;
}

